--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-/* styles.css */
-
-/* Add styles here to customize the appearance of your app */
+body { font-family:Arial, Helvetica, sans-serif; width: 1220px; height: 800px; overflow: hidden; }
+body,div,p,#y2window { display: block; margin: 0; padding: 0; position: relative; }
+span,a { display: inline; }
+.app-container { width: 780px; height: 700px; margin: 10px; float: left; padding: 10px; text-align: center; border: 1px solid #ccc; }
+.webview-container { width: 360px; height: 720px; overflow: hidden; float: right; background-color: #eee; margin: 10px 20px 10px 0; padding: 0; }
+.debug-data { width: 100%; height: 618px; color: #666; padding: 0px; font-size: 14px; text-align: left; overflow: hidden; overflow-y: auto; }
+.bottom-buttons { position: absolute; left: 0; bottom: 32px; width: 100%; height: 40px; background-color: #cc9; font-size: 16px; text-align: center; padding-top: 8px; }
+.bottom-data { position: absolute; left: 0; bottom: 0; width: 100%; height: 23px; background-color: #ccc; font-size: 16px; text-align: center; padding-top: 9px; }
+.bottom-buttons > button { font-size: 14px; font-weight: bold; padding: 5px 10px; cursor: pointer; display: inline-block; margin: 0 10px; }
+.bottom-buttons > button:disabled { cursor: default; }
+#y2window { width: 360px; height: 720px; min-height: 720px; display: inline-flex !important; }
